# FlashProject

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  license  main.cpp
MersenneTwister/: CMakeLists.txt  Generator.h  MersenneTwisterImplementation.h  main.cpp
docs/html/: annotated.html  check__file_8h.html  check__file_8h_source.html  classFlashProject_1_1App-members.html  classFlashProject_1_1App.html  classFlashProject_1_1MainWindow-members.html  classFlashProject_1_1MainWindow.html  classFlashProject_1_1Program-members.html  classFlashProject_1_1Program.html  classes.html  config_8h.html  config_8h_source.html  create__directories_8h.html  create__directories_8h_source.html  defines_8h.html  defines_8h_source.html  dir_0020bbb26e450d0859ec6feca5524b2e.html  dir_1118fecbe52f616af22a46c07e00ca9d.html  dir_1788f8309b1a812dcb800a185471cf6c.html  dir_4e46b7346fb13d48c2d787e80fd4a041.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_61c109ea5687442b6a1ce355e4892ab2.html  dir_63772b626f2709090f0bdca0f40827b4.html  files.html  (+26 more)
include/: check_file.h  config.h  create_directories.h  defines.h  file_worker.h  generate_sequence.h  generate_uuid.h  logger.h  space_parting.h
src/: FileWorker.cpp  check_file.cpp  check_file.h  config.h  create_directories.cpp  create_directories.h  file_worker.cpp  file_worker.h  generate_sequence.cpp  generate_uuid.cpp  logger.cpp  main.cpp  space_parting.cpp  space_parting.h
tests/: mersenne_twister_test.h  tests.cpp
ui/: App.axaml  App.axaml.cs  FlashProject.csproj  FlashProject.sln  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
(+56 files in other folders)
